# engine

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  conanfile.py
Components/: CMakeLists.txt
Components/Sol2/include/: sol.hpp
Components/imgui/: CMakeLists.txt  ImguiManager.cpp
Core/: CMakeLists.txt
Core/include/: EngineEvent.h  EventDispatcher.h  FileLoader.h  GsageDefinitions.h  GsageFacade.h  MouseEvent.h  UIContextEvent.h  UIManager.h  UIShaders.h  WindowManager.h
Core/include/input/: InputFactory.h
Core/include/serialization/: JsonValueWrapper.h
Core/include/systems/: RenderSystem.h
Core/src/: EngineEvent.cpp  EventDispatcher.cpp  FileLoader.cpp  GsageFacade.cpp  MouseEvent.cpp  UIContextEvent.cpp  UIManager.cpp  WindowManager.cpp
Core/src/WIN32/: CommandLine.cpp
Core/src/input/: InputFactory.cpp
Core/src/lua/: LuaInterface.cpp
Core/src/systems/: RenderSystem.cpp
Editor/src/: Editor.cpp
GsageCore/include/: DataProxy.h  Dictionary.h  Engine.h  EngineEvent.h  GameDataManager.h  GsageFacade.h  Serializable.h  Serializer.h
GsageCore/include/components/: ScriptComponent.h
GsageCore/include/lua/: LuaInterface.h
GsageCore/include/serialization/: JsonValueWrapper.h  SolTableWrapper.h
GsageCore/include/systems/: LuaScriptSystem.h
GsageCore/src/: DataProxy.cpp  Dictionary.cpp  Engine.cpp  EngineEvent.cpp  FileLoader.cpp  GameDataManager.cpp  GsageFacade.cpp  Serializer.cpp
PlugIns/: CMakeLists.txt
PlugIns/ImGUI/: CMakeLists.txt
PlugIns/ImGUI/Common/: CMakeLists.txt
PlugIns/ImGUI/Common/include/: ImguiLuaIterator.h  ImguiManager.h
PlugIns/ImGUI/Common/src/: ImguiManager.cpp  ImguiPlugin.cpp
PlugIns/ImGUI/OgreInterfaces/: CMakeLists.txt
PlugIns/ImGUI/OgreInterfaces/include/: ImguiOgreRenderer.h
PlugIns/ImGUI/OgreInterfaces/src/: ImguiOgreRenderer.cpp  ImguiRendererV1.cpp
PlugIns/ImGUI/include/: ImGuiDock.h  ImguiManager.h
PlugIns/ImGUI/include/ogre/: Gizmo.h
PlugIns/ImGUI/src/: ImGuiDock.cpp  ImguiLuaInterface.cpp  ImguiManager.cpp  ImguiPlugin.cpp
PlugIns/ImGUI/src/ogre/: Gizmo.cpp  ImguiOgreWrapper.cpp  OgreView.cpp
PlugIns/ImVue/: CMakeLists.txt
PlugIns/RocketUI/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Core/: TestDataProxy.cpp  TestSerializer.cpp
Tests/resources/: templated.json.dumped  templated.msgpack.dumped
cmake/: Functions.cmake
resources/: editorConfig.json.in  gameConfig.json  gameConfig.json.in  workspace.json
resources/editor/: simple.xml
resources/levels/: exampleLevel.json
resources/scripts/: start.lua
resources/ui/: main.rcss  rocket.rml
tools/: class.cpp.template  class.h.template  postinst
(+77 files in other folders)
